# optswmm

./: MANIFEST.in  README.md  calibration_params.csv  main.ipynb  main.py  main_assim.ipynb  main_correction.ipynb  mapping.ipynb  pyproject.toml  results.out  setup.py  swmmHH7HUv  swmmJj0CIY  swmmc5o5VT  test.out
defs/: __init__.py  default_OptConfig.yaml
examples/calibration/: example0.ipynb  example1.ipynb  example1.py  output.rpt
models/HY006/: HY006.inp
optswmm/: README.md  __about__.py  __init__.py
optswmm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
optswmm/datasets/: datasets.py
optswmm/defs/: __init__.py  default_plot_args.yml  filenames.py
optswmm/utils/: __init__.py  calibutils.py  calparams.py  optconfig.py  perfutils.py  runutils.py  standardization.py  swmmutils.py
tests/: README.md  conftest.py  test_calibutils.py  test_calparams.py  test_datasets.py  test_optconfig.py  test_runutils.py  test_swmmutils.py
tests/fixtures/configs/: sample_optconfig.yaml
tests/fixtures/sample_data/: .~lock.example1_node_inflow.csv#  calibration_params.csv  example1_node_inflow.csv  forcing_data.csv  target_data.csv
tests/fixtures/sample_models/: Example1.rpt  Example1_mod.inp  Example1_mod.rpt  Example1_uncal.inp  Example1_uncal_mod.inp  Example1_uncal_mod.out  Example1_uncal_mod.rpt  Example1_uncal_uncal_mod.inp  Example1_uncal_uncal_mod.rpt  Example1_uncal_uncal_uncal.inp  output.rpt  (+4 more)
utils/: calibconstraints.py  calibutils.py  calparams.py  functions.py  networkutils.py  optconfig.py  runutils.py  standardization.py  swmmutils.py
(+12 files in other folders)
